Set default language to Korean

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 # SimpleCleaner Configuration
 
 # Language setting (en / ko)
-lang: en
+lang: ko
 
 # Message Prefix
 prefix: "&8[&bSimpleCleaner&8] "
